// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  className="form-class"
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Record
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Extra bonus"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="from_party"
    >
      From
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="from_party"
        onChange={[MockFunction]}
        type="text"
        value="BOA"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="to_party"
    >
      To
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="to_party"
        onChange={[MockFunction]}
        type="text"
        value="Benz"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="amount"
    >
      Amount
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="amount"
        onChange={[MockFunction]}
        type="text"
        value={34000}
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  className="form-class"
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Record
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Extra bonus"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="from_party"
    >
      From
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="from_party"
        onChange={[MockFunction]}
        type="text"
        value="BOA"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="to_party"
    >
      To
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="to_party"
        onChange={[MockFunction]}
        type="text"
        value="Benz"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="amount"
    >
      Amount
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="amount"
        onChange={[MockFunction]}
        type="text"
        value={34000}
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
